# mlex_dash_labelmaker_demo

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-master-arm64.yml  docker-compose-master-local.yml  docker-compose-master.yml  docker-compose-models.yml  docker-compose.yml  gunicorn_config.py  install.sh  labelmaker.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  uninstall.sh
.github/workflows/: publish_docker.yml  (+1 more)
compute_launcher/: Dockerfile_arm  ml_worker.py
data/: dist_matrix.parquet  results.csv  test.py
data_service/: Dockerfile
docker/: Dockerfile  requirements.txt
front/: Makefile
mongodbdata/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--5836426417691397744.wt  collection-0--5948632231550424395.wt  collection-17--5836426417691397744.wt  collection-2--5836426417691397744.wt  collection-2--5948632231550424395.wt  collection-4--5836426417691397744.wt  index-1--5836426417691397744.wt  index-1--5948632231550424395.wt  index-18--5836426417691397744.wt  index-19--5836426417691397744.wt  index-20--5836426417691397744.wt  index-21--5836426417691397744.wt  index-22--5836426417691397744.wt  index-23--5836426417691397744.wt  index-3--5836426417691397744.wt  index-3--5948632231550424395.wt  index-5--5836426417691397744.wt  index-6--5836426417691397744.wt  sizeStorer.wt
old_streamlit/: Makefile  deploy.py  label_maker_main.py  ml_label_maker.py  ml_worker.py  train.py
src/: app.py  app_layout.py  labelmaker.py  labels.py  query.py  templates.py  thumbnail.py  training.py
(+87 files in other folders)
