[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["src/**/*"]

[project]
name = "labelmaker"
version = "0.2.0"
description = "Labelmaker is a labeling pipeline in MLExchange"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"

dependencies = [
    "dash==2.9.3",
    "dash[diskcache]",
    "dash_bootstrap_components==1.0.2",
    "dash_daq==0.5.0",
    "dash-extensions==0.0.71",
    "dash-uploader==0.6.0",
    "dash-component-editor==0.0.7",
    "flask==3.0.0",
    "flask-caching==1.10.1",
    "h5py==3.9.0",
    "numpy",
    "pandas",
    "Pillow==8.3.2",
    "python-dotenv",
    "requests==2.26.0",
    "tiled[client]==0.1.0a107",
    "werkzeug>=2.2.3",
    "diskcache==5.6.3",
]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "flake8==7.0.0",
    "isort==5.13.2",
    "pre-commit==3.6.2",
    "pytest==8.1.1",
]
